--- a/style.css
+++ b/style.css
@@ -1,10 +1,25 @@
-body {
-    margin: 0;
-    padding: 0;
-    background: #ccc;
-    opacity: 1;
-    /*background-image: url("img/hacker.gif");*/
-    /*background-size: cover;*/
+/*body {*/
+    /*margin: 0;*/
+    /*padding: 0;*/
+    /*background: #ccc;*/
+    /*opacity: 1;*/
+    /*!*background-image: url("img/hacker.gif");*!*/
+    /*!*background-size: cover;*!*/
+/*}*/
+a {
+    color: #f18c2f;
+    font-weight: 700;
+    outline: 0 !important;
+    text-decoration: none !important;
+    -webkit-transition: all .15s ease-out;
+    -moz-transition: all .15s ease-out;
+    -o-transition: all .15s ease-out;
+    transition: all .15s ease-out
+}
+
+a:hover {
+    color: #f18c2f !important;
+    text-decoration: none !important
 }
 
 section#title_section{
@@ -24,27 +39,393 @@ section#title_section{
     opacity: 0.6;
 }
 
+.navbar{
+    border:none;
+    border-radius:0
+}
 
-nav#topmenu ul{
-    list-style: none;
-    background-color: #444;
-    text-align: center;
-    padding: 0;
+.main-navbar{
+    margin-bottom:0
+}
+
+.navbar-light {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
     margin: 0;
+    background: #fff;
+    padding: 0;
+    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
 }
 
-nav#topmenu li{
-    font-size: 24px;
-    line-height: 40px;
-    height: 40px;
-    display: inline-block;
-    padding: 20px;
+.navbar-light .mainlinks li a {
+    padding: 4px 25px 8px;
+    color: #8f9499 !important;
+    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 50px;
+    font-weight: 900;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out
 }
 
-nav#topmenu a{
-    text-decoration: none;
+.navbar-light .mainlinks li {
+    border-right: 1px solid #e9e9e9
+}
+
+.navbar-light .mainlinks li a:hover {
+    color: #606871 !important;
+    background: #f6f6f6 !important
+}
+
+@media (max-width: 770px) {
+    .slide-tile .btn-read-more {
+        padding: 12px 30px;
+        font-size: 12px
+    }
+
+    .page-wrapper {
+        padding-top: 145px;
+        background: #121212
+    }
+}
+
+header .social-links > li a:hover, header .social-links > li a:focus {
+    background: none !important
+}
+
+header .facebook:hover, header .facebook:focus {
+    color: #3b5998 !important;
+    border-bottom: 3px solid #3b5998 !important
+}
+
+header .twitch:hover, header .twitch:focus {
+    color: #6441A5 !important;
+    border-bottom: 3px solid #6441A5 !important
+}
+
+header .twitter:hover, header .twitter:focus {
+    color: #4AB2D9 !important;
+    border-bottom: 3px solid #4AB2D9 !important
+}
+
+header .youtube:hover, header .youtube:focus {
+    color: #b00 !important;
+    border-bottom: 3px solid #b00 !important
+}
+
+header .instagram:hover, header .instagram:focus {
+    color: #458eff !important;
+    border-bottom: 3px solid #458eff !important
+}
+
+header .navbar-nav > li a {
     color: #fff;
+    font-size: 14px;
+    font-weight: 900;
+    text-transform: uppercase;
+    line-height: 70px;
+    padding: 0 18px;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    outline: none;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    letter-spacing: .3px;
+    border-bottom: 3px solid transparent
 }
+
+header .navbar-nav > li {
+    border-right: 1px solid #121212
+}
+
+header .social-links li {
+    border-right: none !important
+}
+
+header .main-links > li a:hover, header .main-links > li a:focus {
+    background: rgba(255, 255, 255, 0.02) !important;
+    border-bottom: 3px solid #f1872e;
+    color: #E68E26 !important
+}
+
+header .main-links > li.active a {
+    background: rgba(0, 0, 0, 0.02) !important;
+    border-bottom: 3px solid #f1872e;
+    color: #E68E26 !important
+}
+
+.top-nav-logo {
+    padding-top: 20px;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out
+}
+
+.top-nav-logo img {
+    display: block;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out
+}
+
+.header-scroll .main-links {
+    margin-top: 0
+}
+
+.header-scroll .navbar-nav > li a {
+    line-height: 60px !important
+}
+
+.header-scroll .top-nav-logo {
+    height: 70px;
+    padding-top: 10px
+}
+
+.header-scroll .top-nav-logo img {
+    max-height: 85px !important
+}
+
+.header-scroll img {
+    display: block;
+    max-height: 55px
+}
+
+@media (max-width: 1201px) {
+    header {
+        height: 95px !important;
+        width: 100%
+    }
+
+    .nav-menu-line {
+        height: 3px;
+        width: 36px;
+        display: block;
+        background: #fff;
+        margin: 5px 0;
+        border-radius: 50px
+    }
+
+    .logo-xs {
+        max-height: 40px !important;
+        margin: 7px 0 0 15px !important
+    }
+
+    .navbar-nav > li {
+        width: 100%
+    }
+
+    .main-links > li {
+        width: 100%;
+        border-left: none;
+        border-right: none;
+        border-bottom: 1px solid #303238;
+        background: #3a3b3f
+    }
+
+    .main-links > li:hover, .main-links > li:focus {
+        background: #3a3b3f
+    }
+
+    .main-links > li a {
+        line-height: 55px;
+        background: none !important
+    }
+
+    .main-links > li > a:focus {
+        background: none !important
+    }
+
+    .nav > li > a:focus, .nav > li > a:hover {
+        text-decoration: none;
+        background-color: none !important
+    }
+
+    .navbar-toggle {
+        padding: 15px 20px;
+        background-color: transparent;
+        background-image: none;
+        border: none;
+        border-radius: 0;
+        margin: 0;
+        display: block
+    }
+
+    .navbar-collapse {
+        border-top: none
+    }
+
+    .navbar-collapse.collapse {
+        display: none !important
+    }
+
+    .collapse.in {
+        display: block !important
+    }
+
+    .navbar-header {
+        width: 100%
+    }
+
+    header {
+        height: auto !important;
+        width: 100%;
+        background: #1a1a1a;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0
+    }
+}
+
+.main-links {
+    border-left: 1px solid #121212;
+    margin: 0 -15px
+}
+
+header .navbar-nav > li a {
+    color: #fff;
+    font-size: 14px;
+    font-weight: 900;
+    text-transform: uppercase;
+    line-height: 70px;
+    padding: 0 18px;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    outline: none;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+    letter-spacing: .3px;
+    border-bottom: 3px solid transparent
+}
+
+header .navbar-nav > li {
+    border-right: 1px solid #121212
+}
+.header-scroll .navbar-nav > li a {
+    line-height: 60px !important
+}
+
+.social-links {
+    border-left: 1px solid #121212
+}
+
+.social-links li a {
+    border-bottom: none
+}
+
+.social-links {
+    border-left: none
+}
+
+header .social-links > li a:hover, header .social-links > li a:focus {
+    background: none !important
+}
+
+header .social-links li {
+    border-right: none !important
+}
+
+header .facebook:hover, header .facebook:focus {
+    color: #3b5998 !important;
+    border-bottom: 3px solid #3b5998 !important
+}
+
+header .twitter:hover, header .twitter:focus {
+    color: #4AB2D9 !important;
+    border-bottom: 3px solid #4AB2D9 !important
+}
+
+header .youtube:hover, header .youtube:focus {
+    color: #b00 !important;
+    border-bottom: 3px solid #b00 !important
+}
+
+.btn-social {
+    margin: 0 2px;
+    line-height: 28px;
+    width: 32px;
+    height: 30px;
+    padding: 0;
+    vertical-align: middle;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 3px;
+    background: #202020 !important
+}
+
+.btn-social i {
+    color: #fff !important
+}
+
+.btn-social:hover i {
+    color: #fff !important
+}
+
+.btn-facebook:hover, .btn-facebook:focus {
+    background: #3b5998 !important;
+    color: #fff
+}
+
+.btn-twitter:hover, .btn-twitter:focus {
+    background: #4AB2D9 !important;
+    color: #FFF
+}
+
+.btn-youtube:hover, .btn-youtube:focus {
+    background: #b00 !important;
+    color: #FFF
+}
+
+footer .facebook:hover, footer .facebook:focus {
+    color: #3b5998 !important
+}
+
+footer .twitter:hover, footer .twitter:focus {
+    color: #4AB2D9 !important
+}
+
+footer .youtube:hover, footer .youtube:focus {
+    color: #b00 !important
+}
+
+body {
+    background: #121212;
+    font-family: 'Roboto Condensed', sans-serif;
+    color: #fff;
+    line-height: 1;
+    overflow-x: hidden
+}
+
+
+/*nav#topmenu ul{*/
+    /*list-style: none;*/
+    /*background-color: #444;*/
+    /*text-align: center;*/
+    /*padding: 0;*/
+    /*margin: 0;*/
+/*}*/
+
+/*nav#topmenu li{*/
+    /*font-size: 24px;*/
+    /*line-height: 40px;*/
+    /*height: 40px;*/
+    /*display: inline-block;*/
+    /*padding: 20px;*/
+/*}*/
+
+/*nav#topmenu a{*/
+    /*text-decoration: none;*/
+    /*color: #fff;*/
+/*}*/
 
 .mySlides {display:none}
 
@@ -111,4 +492,10 @@ nav#topmenu a{
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
     .text {font-size: 11px}
+}
+
+.img-responsive {
+    display:block;
+    max-width:100%;
+    height:auto
 }
