--- a/style.css
+++ b/style.css
@@ -1,501 +1,341 @@
-/*body {*/
-    /*margin: 0;*/
-    /*padding: 0;*/
-    /*background: #ccc;*/
-    /*opacity: 1;*/
-    /*!*background-image: url("img/hacker.gif");*!*/
-    /*!*background-size: cover;*!*/
-/*}*/
-a {
-    color: #f18c2f;
-    font-weight: 700;
-    outline: 0 !important;
-    text-decoration: none !important;
-    -webkit-transition: all .15s ease-out;
-    -moz-transition: all .15s ease-out;
-    -o-transition: all .15s ease-out;
-    transition: all .15s ease-out
-}
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
-a:hover {
-    color: #f18c2f !important;
-    text-decoration: none !important
-}
-
-section#title_section{
-    text-align: center;
-}
-.page_container{
-    position: relative;
-    overflow: hidden;
-}
-.page_container img#background{
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: auto;
-    z-index: 1;
-    opacity: 0.6;
-}
-
-.navbar{
-    border:none;
-    border-radius:0
-}
-
-.main-navbar{
-    margin-bottom:0
-}
-
-.navbar-light {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
+*{
     margin: 0;
-    background: #fff;
     padding: 0;
-    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
 }
 
-.navbar-light .mainlinks li a {
-    padding: 4px 25px 8px;
-    color: #8f9499 !important;
+
+
+body{
+    font-size: 14px;
+    font-family: "Lato", "Arial", "Helvetica", sans-serif;
+    background-color: #253d50;
+    color: #000;
+}
+
+header{
+    width: 80%;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+main{
+    width: 80%;
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
+header{
+    background-color: #bdb7bf;
+    margin-bottom: 0;
+}
+
+.header-nav{
+    background-color: #8db7d7;
+
+    border-radius: 10px;
+}
+
+.header-nav ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    /*height: 50px;*/
+    max-width: 100%;
+    flex-wrap: wrap;
+}
+
+.header-nav ul li{
+    height: inherit;
+    width: auto;
+    border-left: 3px solid #8db7d7;
+    cursor: pointer;
+    padding: 15px;
+}
+
+.index-page li:nth-child(1), .test-page li:nth-child(4), .images li:nth-child(2), .videos li:nth-child(3){
+
+    background-color: #f3f3f3;
+    border-left: 3px solid #1001d7;
+}
+
+
+.header-nav ul li:hover{
+    background-color: #f3f3f3;
+    border-left: 3px solid #1001d7;
+}
+
+.header-nav ul li a{
+    font-size: 2rem;
     text-transform: uppercase;
-    font-size: 14px;
-    line-height: 50px;
-    font-weight: 900;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out
+    text-decoration: none;
+    font-weight: bold;
+    color: #000000
 }
 
-.navbar-light .mainlinks li {
-    border-right: 1px solid #e9e9e9
-}
-
-.navbar-light .mainlinks li a:hover {
-    color: #606871 !important;
-    background: #f6f6f6 !important
-}
-
-@media (max-width: 770px) {
-    .slide-tile .btn-read-more {
-        padding: 12px 30px;
-        font-size: 12px
-    }
-
-    .page-wrapper {
-        padding-top: 145px;
-        background: #121212
-    }
-}
-
-header .social-links > li a:hover, header .social-links > li a:focus {
-    background: none !important
-}
-
-header .facebook:hover, header .facebook:focus {
-    color: #3b5998 !important;
-    border-bottom: 3px solid #3b5998 !important
-}
-
-header .twitch:hover, header .twitch:focus {
-    color: #6441A5 !important;
-    border-bottom: 3px solid #6441A5 !important
-}
-
-header .twitter:hover, header .twitter:focus {
-    color: #4AB2D9 !important;
-    border-bottom: 3px solid #4AB2D9 !important
-}
-
-header .youtube:hover, header .youtube:focus {
-    color: #b00 !important;
-    border-bottom: 3px solid #b00 !important
-}
-
-header .instagram:hover, header .instagram:focus {
-    color: #458eff !important;
-    border-bottom: 3px solid #458eff !important
-}
-
-header .navbar-nav > li a {
-    color: #fff;
-    font-size: 14px;
-    font-weight: 900;
-    text-transform: uppercase;
-    line-height: 70px;
-    padding: 0 18px;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-    outline: none;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    letter-spacing: .3px;
-    border-bottom: 3px solid transparent
-}
-
-header .navbar-nav > li {
-    border-right: 1px solid #121212
-}
-
-header .social-links li {
-    border-right: none !important
-}
-
-header .main-links > li a:hover, header .main-links > li a:focus {
-    background: rgba(255, 255, 255, 0.02) !important;
-    border-bottom: 3px solid #f1872e;
-    color: #E68E26 !important
-}
-
-header .main-links > li.active a {
-    background: rgba(0, 0, 0, 0.02) !important;
-    border-bottom: 3px solid #f1872e;
-    color: #E68E26 !important
-}
-
-.top-nav-logo {
-    padding-top: 20px;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out
-}
-
-.top-nav-logo img {
-    display: block;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out
-}
-
-.header-scroll .main-links {
-    margin-top: 0
-}
-
-.header-scroll .navbar-nav > li a {
-    line-height: 60px !important
-}
-
-.header-scroll .top-nav-logo {
-    height: 70px;
-    padding-top: 10px
-}
-
-.header-scroll .top-nav-logo img {
-    max-height: 85px !important
-}
-
-.header-scroll img {
-    display: block;
-    max-height: 55px
-}
-
-@media (max-width: 1201px) {
-    header {
-        height: 95px !important;
-        width: 100%
-    }
-
-    .nav-menu-line {
-        height: 3px;
-        width: 36px;
-        display: block;
-        background: #fff;
-        margin: 5px 0;
-        border-radius: 50px
-    }
-
-    .logo-xs {
-        max-height: 40px !important;
-        margin: 7px 0 0 15px !important
-    }
-
-    .navbar-nav > li {
-        width: 100%
-    }
-
-    .main-links > li {
-        width: 100%;
-        border-left: none;
-        border-right: none;
-        border-bottom: 1px solid #303238;
-        background: #3a3b3f
-    }
-
-    .main-links > li:hover, .main-links > li:focus {
-        background: #3a3b3f
-    }
-
-    .main-links > li a {
-        line-height: 55px;
-        background: none !important
-    }
-
-    .main-links > li > a:focus {
-        background: none !important
-    }
-
-    .nav > li > a:focus, .nav > li > a:hover {
-        text-decoration: none;
-        background-color: none !important
-    }
-
-    .navbar-toggle {
-        padding: 15px 20px;
-        background-color: transparent;
-        background-image: none;
-        border: none;
-        border-radius: 0;
-        margin: 0;
-        display: block
-    }
-
-    .navbar-collapse {
-        border-top: none
-    }
-
-    .navbar-collapse.collapse {
-        display: none !important
-    }
-
-    .collapse.in {
-        display: block !important
-    }
-
-    .navbar-header {
-        width: 100%
-    }
-
-    header {
-        height: auto !important;
-        width: 100%;
-        background: #1a1a1a;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0
-    }
-}
-
-.main-links {
-    border-left: 1px solid #121212;
-    margin: 0 -15px
-}
-
-header .navbar-nav > li a {
-    color: #fff;
-    font-size: 14px;
-    font-weight: 900;
-    text-transform: uppercase;
-    line-height: 70px;
-    padding: 0 18px;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-    outline: none;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    letter-spacing: .3px;
-    border-bottom: 3px solid transparent
-}
-
-header .navbar-nav > li {
-    border-right: 1px solid #121212
-}
-.header-scroll .navbar-nav > li a {
-    line-height: 60px !important
-}
-
-.social-links {
-    border-left: 1px solid #121212
-}
-
-.social-links li a {
-    border-bottom: none
-}
-
-.social-links {
-    border-left: none
-}
-
-header .social-links > li a:hover, header .social-links > li a:focus {
-    background: none !important
-}
-
-header .social-links li {
-    border-right: none !important
-}
-
-header .facebook:hover, header .facebook:focus {
-    color: #3b5998 !important;
-    border-bottom: 3px solid #3b5998 !important
-}
-
-header .twitter:hover, header .twitter:focus {
-    color: #4AB2D9 !important;
-    border-bottom: 3px solid #4AB2D9 !important
-}
-
-header .youtube:hover, header .youtube:focus {
-    color: #b00 !important;
-    border-bottom: 3px solid #b00 !important
-}
-
-.btn-social {
-    margin: 0 2px;
-    line-height: 28px;
-    width: 32px;
-    height: 30px;
-    padding: 0;
-    vertical-align: middle;
-    font-size: 14px;
+.welcome{
     text-align: center;
-    border-radius: 3px;
-    background: #202020 !important
+    padding-top: 15px;
+    background-color: #d7892a;
+    border-radius: 10px;
 }
 
-.btn-social i {
-    color: #fff !important
+.welcome h1, h3{
+    text-transform: capitalize;
 }
 
-.btn-social:hover i {
-    color: #fff !important
+.welcome h1{
+    font-size: 8rem;
+    color: #000;
+    font-family: 'Playfair Display', serif;
 }
 
-.btn-facebook:hover, .btn-facebook:focus {
-    background: #3b5998 !important;
-    color: #fff
+.welcome h3{
+    color: #000;
+    padding-bottom: 15px;
 }
-
-.btn-twitter:hover, .btn-twitter:focus {
-    background: #4AB2D9 !important;
-    color: #FFF
+.welcome img{
+    width: 50%;
 }
-
-.btn-youtube:hover, .btn-youtube:focus {
-    background: #b00 !important;
-    color: #FFF
-}
-
-footer .facebook:hover, footer .facebook:focus {
-    color: #3b5998 !important
-}
-
-footer .twitter:hover, footer .twitter:focus {
-    color: #4AB2D9 !important
-}
-
-footer .youtube:hover, footer .youtube:focus {
-    color: #b00 !important
-}
-
-body {
-    background: #121212;
-    font-family: 'Roboto Condensed', sans-serif;
-    color: #fff;
-    line-height: 1;
-    overflow-x: hidden
-}
-
-
-/*nav#topmenu ul{*/
-    /*list-style: none;*/
-    /*background-color: #444;*/
-    /*text-align: center;*/
-    /*padding: 0;*/
-    /*margin: 0;*/
+/*#options {*/
+    /*position: relative;*/
+    /*z-index: 100;*/
+    /*margin-bottom: 40px;*/
 /*}*/
 
-/*nav#topmenu li{*/
-    /*font-size: 24px;*/
-    /*line-height: 40px;*/
-    /*height: 40px;*/
-    /*display: inline-block;*/
-    /*padding: 20px;*/
-/*}*/
 
-/*nav#topmenu a{*/
-    /*text-decoration: none;*/
-    /*color: #fff;*/
-/*}*/
 
-.mySlides {display:none}
-
-/* Slideshow container */
-.slideshow-container {
-    max-width: 450px;
-    position: static;
-    margin: auto;
-}
-
-/* Caption text */
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
+#options{
     position: absolute;
-    bottom: 8px;
-    width: 100%;
+    top: 140px;
+    left: 70px;
+}
+
+#navigation button{
+    height: 30px;
+    width:50px;
+    border-radius: 10px;
+    border: none;
+    background-color: #fff;
+    text-decoration: none;
+}
+main{
+    margin-top: 0;
+}
+
+
+.fuck-carousel{
+    background-color: #8db7d7;
+    height: 250px;
+    border-radius: 10px;
+}
+
+.fuck-carousel h2{
+    margin: 0;
+}
+
+.typical-programmers{
     text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
+.typical-programmers h2{
+    text-transform: uppercase;
+    padding: 5px;
+    font-weight: bold;
+    font-size: 3rem;
+
+}
+
+.typical-programmers p{
+    text-transform: capitalize;
+}
+
+.testim{
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.testim h1{
+    margin:0;
+    text-align: center;
+    font-family: "Balthazar", "Droid Serif", serif;
+}
+
+.testimonials{
+    display: inline-flex;
+    /*flex-direction: row;*/
+    /*align-content: space-around;*/
+    justify-content: center;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+
+.left-testimonial, .right-testimonial{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    height: auto;
+    width: 24%;
+    font-size: 1.4rem;
+    margin: 5px;
+    border: 5px solid #253d50;
+    border-radius: 15px;
+    padding: 5px;
+    box-sizing: border-box;
+}
+
+.left-testimonial img{
+    float:left;
+    max-width:100%;
+    height:180px;
+    border-radius: 50%;
+}
+
+.right-testimonial img{
+    float: right;
+    max-width:100%;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.testimonial-name{
+    height: 15%;
+    font-size: 1.2rem;
+    font-weight:bold;
+    text-align: right;
+    /*position: absolute;*/
+}
+
+.questionary{
+    height: 500px;
+    background-color: #8db7d7;
+    border-radius: 15px;
+}
+
+.questions-container{
+    /*overflow: hidden;*/
+    height: 500px;
+
+    position: relative;
+    /*background-color: lightblue;*/
+    text-align: center;
+}
+
+.question-box, .result{
+    width: 100%;
+    height: 400px;
     position: absolute;
     top: 0;
+    left: -150%;
+    transition: left 1s;
+    /*background-color: lightblue;*/
+    /*border: 2px solid black;*/
+    /*top: 0;*/
+    /*left: 0;*/
 }
 
-/* The dots/bullets/indicators */
-.dot {
-    height: 13px;
-    width: 13px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+.question-1{
+    /*left: 10px;*/
+    left: 0;
 }
 
-.active {
-    background-color: #717171;
+/*.result-1{*/
+    /*left: 0;*/
+/*}*/
+
+.question{
+    /*display: block;*/
+    margin: 0 auto;
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: center;
+    width: 50%;
 }
 
-/* Fading animation */
-.fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
+.answers{
+    display: inline-flex;
 }
 
-@-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+.answers button{
+    line-height:100px;
+    width: 200px;
+    height: 100px;
+    background-color: #fff;
+    margin: 15px;
+    cursor: pointer;
+    border: 2px solid black;
+    border-radius: 30px;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    outline: none;
 }
 
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+.answers button:hover{
+    background-color: green;
+    color: #fff;
+    border: 2px solid white;
 }
 
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-    .text {font-size: 11px}
+.result-text{
+    font-size: 2rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: Roboto, sans-serif
 }
 
-.img-responsive {
-    display:block;
-    max-width:100%;
-    height:auto
+.result img{
+    width: 500px;
+    height: 300px;
+    border-radius: 15px;
+}
+
+.questionary p{
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-family: "Comfortaa", sans-serif;
+    text-align: center;
+}
+
+footer{
+    justify-content: center;
+
+    width: 80%;
+    height: 50px;
+    margin: 0 auto;
+    background-color: white;
+    margin-top: 10px;
+    border-radius: 15px;
+    /*!*display: inline-flex;*!*/
+    /*flex-direction: row;*/
+}
+
+footer p{
+    float: left;
+    line-height: 50px;
+    padding-left: 10px;
+    font-weight: bold;
+}
+
+footer nav{
+    float: right;
+}
+
+footer ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    height: 50px;
+    max-width: 100%;
+    flex-wrap: wrap;
+}
+
+footer ul li{
+    padding: 15px;
+}
+footer ul li a{
+    font-size: 30px;
 }
