--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ header{
     width: auto;
     border-left: 3px solid #8db7d7;
     cursor: pointer;
-    padding: 15px;
+    padding: 5px;
 }
 
 .index-page li:nth-child(1), .test-page li:nth-child(4), .images-page li:nth-child(2), .videos-page li:nth-child(3){
@@ -352,7 +352,7 @@ footer ul li a{
 }
 
 .images-section{
-    background-color: #fff;
+    background-color: #8db7d7;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -371,9 +371,14 @@ footer ul li a{
     margin: 5px;
     text-align: center;
     line-height: 280px;
-    box-shadow: 5px 5px 5px grey;
     border: 1px solid black;
     border-radius: 15px;
+    background-color: white;
+}
+
+.images-section article:hover{
+
+    box-shadow: 0px 0px 8px 7px rgba(0,0,0,0.75);
 }
 
 .images-section img{
@@ -500,7 +505,7 @@ footer ul li a{
 }
 
 .video-player-box{
-    background: url("img/1579feb3e44c8e658aac136445720687.gif");
+    background: url("img/hacker.gif");
     display: inline-block;
     text-align: center;
     border-radius: 15px;
