--- a/style.css
+++ b/style.css
@@ -438,7 +438,7 @@ footer ul li a{
     text-align: center;
     font-weight: bold;
     padding: 10px;
-    text-shadow: 2px 2px 8px 7px rgba(17, 8, 221, 0.75);
+    text-shadow: 2px 8px 7px rgba(17, 8, 221, 0.75);
 
 }
 
@@ -651,7 +651,6 @@ footer ul li a{
     width: 45%;
     height: 300px;
     box-shadow: 0px 0px 15px white;
-    frameborder:"0";
 }
 
 @media screen and (max-width: 960px) {
