--- a/style.css
+++ b/style.css
@@ -458,8 +458,11 @@ footer ul li a{
 }
 
 .container img{
-    height: calc(50vh - 100px);
-    max-width: 80%;
+    height: calc(40vh - 100px);
+    width: calc(50vh - 50px);
+
+    /*max-height: 100vh;*/
+    /*max-width: 100vh;*/
     margin: 0 auto;
 }
 
@@ -474,7 +477,7 @@ footer ul li a{
     }
 
     .container img{
-        height: calc(50vh - 150px);
+        height: calc(50vh - 50px);
         width: 480px;
         margin: 0 auto;
     }
@@ -484,17 +487,57 @@ footer ul li a{
     }
 }
 
+
+
 @media screen and (max-width: 480px) {
     .container{
+
+        /*height: calc(50vh - 100px);*/
         width: 80%;
     }
 
     .container img{
-        height: calc(50vh - 200px);
+        height: calc(50vh - 50px);
         width: 320px;
         margin: 0 auto;
     }
+}@media screen and (max-height: 736px) and (max-width: 414px){
+    .container img{
+        height: calc(50vh - 150px);
+        width: 80%;
+    }
 }
+@media screen and (max-height: 414px) and (max-width: 736px){
+    .container img{
+        height: calc(50vh - 50px);
+        width: 80%;
+    }
+}
+@media screen and (max-height: 568px) and (max-width: 320px){
+    .container img{
+        height: calc(50vh - 50px);
+        width: 300px;
+    }
+}
+@media screen and (max-height: 640px) and (max-width: 360px){
+    .container img{
+        height: calc(50vh - 150px);
+        width: 80%;
+    }
+}
+/*@media screen and (max-height: 721px) and (max-width: 641px){*/
+    /*.container img{*/
+        /*height: calc(50vh - 150px);*/
+        /*width: 80%;*/
+    /*}*/
+/*}*/
+@media screen and (max-height: 721px) and (max-width: 441px){
+    .container img{
+        height: calc(50vh - 200px);
+        width: 80%;
+    }
+}
+
 
 .video-player-box{
     background: url("img/hacker.gif");
