--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ header{
     text-transform: uppercase ;
     font-size: 8rem;
     color: #000;
-    font-family: "Bree Serif", sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 .welcome h3{
