--- a/style.css
+++ b/style.css
@@ -7,11 +7,15 @@
 }
 
 html{
-    width: 100%;
+    /*height: 100%;*/
+    margin: 0;
+    padding: 0;
+    /*min-height: 100%;*/
 }
 
+
 body{
-    width: 100%;
+    /*height: 100%;*/
     font-size: 14px;
     font-family: 'Bree Serif', serif;
     /*background: linear-gradient(135deg, #ea6a2e 1%,#ea6a2e 14%,#2989d8 73%,#7db9e8 100%);*/
@@ -20,6 +24,11 @@ body{
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center;
+}
+
+
+.video-body{
+    min-height:100%;
 }
 
 header{
@@ -353,7 +362,7 @@ main{
     }
 }
 
-footer{
+footer {
     justify-content: center;
     width: 80%;
     height: 50px;
@@ -361,11 +370,14 @@ footer{
     margin-top: 10px;
     border-radius: 15px;
     background: rgba(141, 183, 215, 0.8);
+}
+
+/*.video-footer{*/
     /*position: absolute;*/
     /*right: 0;*/
     /*bottom:0;*/
     /*left: 0;*/
-}
+/*}*/
 
 
 footer ul{
@@ -376,10 +388,12 @@ footer ul{
     height: 50px;
     max-width: 100%;
     flex-wrap: wrap;
+    margin:0;
 }
 
 footer ul li{
-    padding: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 footer ul li a{
     font-size: 30px;
@@ -546,6 +560,7 @@ footer ul li a{
     text-align: center;
     border-radius: 15px;
     margin: 0 auto;
+    /*min-height: 800px;*/
 }
 
 .video-player-box iframe{
